--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-image: linear-gradient(180deg, rgb(27, 27, 27),  black 15%);
+  background-image: linear-gradient(180deg, rgb(20, 20, 20), rgb(40, 40, 40) 40%);
   color: white;
   height: 900px;
 }
@@ -8,16 +8,17 @@
 .project-container {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
+  flex-wrap: wrap;
   margin: auto;
   padding: 1rem;
   background-color: rgb(0, 0, 0);
-  height: 368px
+  height: 568px
 }
 
 .project-container-border {
   width: 80%;
-  height: 400px;
+  height: 600px;
   padding: 1rem;
   position: relative;
   background: linear-gradient(135deg, red, purple 12%, black 12%, black 88%, purple 88%, red);
@@ -32,7 +33,7 @@
   animation-timing-function: ease-in;
 }
 
-@keyframes slide {
+/* @keyframes slide {
   0% {
     background: linear-gradient(135deg, red, purple 15%, black 15%, black 85%, purple 85%, red);
   }
@@ -66,16 +67,21 @@
   100% {
     background: linear-gradient(315deg, red, purple 15%, black 15%, black 85%, purple 85%, red);
   }
-}
+} */
 
 .project {
-  width: 70%;
+  width: 60%;
   text-align: left;
-  padding: 20px;
+  margin: 50px;
 }
 
 .project-list {
   width: 30%;
   text-align: left;
-  padding: 20px;
+  margin-top: 60px;
+}
+
+.header {
+  text-align: right;
+  margin: 0 10% 
 }
