--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-image: linear-gradient(180deg, rgb(20, 20, 20), rgb(40, 40, 40) 40%);
+  background-image: linear-gradient(180deg, rgb(0, 0, 0) 20%, rgb(40, 40, 40) 90%);
   color: white;
   height: 900px;
 }
@@ -13,12 +13,12 @@
   margin: auto;
   padding: 1rem;
   background-color: rgb(0, 0, 0);
-  height: 568px
+  /* height: 568px */
 }
 
 .project-container-border {
   width: 80%;
-  height: 600px;
+  /* height: 600px; */
   padding: 1rem;
   position: relative;
   background: linear-gradient(135deg, red, purple 12%, black 12%, black 88%, purple 88%, red);
@@ -84,4 +84,18 @@
 .header {
   text-align: right;
   margin: 0 10% 
+}
+
+.social_links {
+  margin-left: 16px;
+  color: white;
+  font-size: large;
+}
+
+.project_titles_container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: baseline;
+  margin-right: 10px;
 }
