--- a/src/App.css
+++ b/src/App.css
@@ -29,56 +29,24 @@
 }
 
 .project-container-border:hover {
-  animation-name: slide;
-  animation-timing-function: ease-in;
+  background: linear-gradient(135deg, purple, red 12%, black 12%, black 88%, red 88%, purple);
 }
-
-/* @keyframes slide {
-  0% {
-    background: linear-gradient(135deg, red, purple 15%, black 15%, black 85%, purple 85%, red);
-  }
-  10% {
-    background: linear-gradient(153deg, red, purple 15%, black 15%, black 85%, purple 85%, red);
-  }
-  20% {
-    background: linear-gradient(171deg, red, purple 15%, black 15%, black 85%, purple 85%, red);
-  }
-  30% {
-    background: linear-gradient(189deg, red, purple 15%, black 15%, black 85%, purple 85%, red);
-  }
-  40% {
-    background: linear-gradient(207deg, red, purple 15%, black 15%, black 85%, purple 85%, red);
-  }
-  50% {
-    background: linear-gradient(225deg, red, purple 15%, black 15%, black 85%, purple 85%, red);
-  }
-  60% {
-    background: linear-gradient(243deg, red, purple 15%, black 15%, black 85%, purple 85%, red);
-  }
-  70% {
-    background: linear-gradient(261deg, red, purple 15%, black 15%, black 85%, purple 85%, red);
-  }
-  80% {
-    background: linear-gradient(279deg, red, purple 15%, black 15%, black 85%, purple 85%, red);
-  }
-  90% {
-    background: linear-gradient(297deg, red, purple 15%, black 15%, black 85%, purple 85%, red);
-  }
-  100% {
-    background: linear-gradient(315deg, red, purple 15%, black 15%, black 85%, purple 85%, red);
-  }
-} */
 
 .project {
   width: 60%;
   text-align: left;
   margin: 50px;
+  
 }
 
 .project-list {
   width: 30%;
   text-align: left;
   margin-top: 60px;
+}
+
+.project-list-name {
+  cursor: pointer;
 }
 
 .header {
