--- a/src/App.css
+++ b/src/App.css
@@ -13,12 +13,10 @@
   margin: auto;
   padding: 1rem;
   background-color: rgb(0, 0, 0);
-  /* height: 568px */
 }
 
 .project-container-border {
   width: 80%;
-  /* height: 600px; */
   padding: 1rem;
   position: relative;
   background: linear-gradient(135deg, red, purple 12%, black 12%, black 88%, purple 88%, red);
@@ -50,8 +48,16 @@
 }
 
 .header {
+  /* display: flex;
+  flex-direction: row;
+  align-items: baseline; */
   text-align: right;
-  margin: 0 10% 
+  margin: 0 10%;
+  padding: 25px 0 
+}
+
+.name {
+  
 }
 
 .social_links {
