--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,16 @@
+* {
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
-  background-image: linear-gradient(180deg, rgb(0, 0, 0) 20%, rgb(40, 40, 40) 90%);
-  color: white;
-  height: 900px;
+  background-image: linear-gradient(0deg, rgba(198, 243, 232, 0.8), rgba(69, 171, 146, 0.8));
+  color: rgb(64, 63, 63);
+
+}
+
+h2{
+  margin-left: 12px
 }
 
 .project-container {
@@ -12,29 +20,38 @@
   flex-wrap: wrap;
   margin: auto;
   padding: 1rem;
-  background-color: rgb(0, 0, 0);
+  margin: auto 5% ;
+  border-radius: 20px 0 20px 0;
 }
 
-.project-container-border {
-  width: 80%;
-  padding: 1rem;
-  position: relative;
-  background: linear-gradient(135deg, red, purple 12%, black 12%, black 88%, purple 88%, red);
-  padding: 15px;
-  margin: auto;
-  animation-duration: .3s;
-  animation-iteration-count: 1;
+.project-container__list {
+  width: 100%;
 }
 
-.project-container-border:hover {
-  background: linear-gradient(135deg, purple, red 12%, black 12%, black 88%, red 88%, purple);
+.project-container__list {
+  width: 100%;
 }
 
 .project {
   width: 60%;
   text-align: left;
   margin: 50px;
-  
+}
+
+.project-video {
+  border: 10px solid rgb(56, 55, 55);
+  border-radius: 20px 0 20px 0;
+  padding: 10px;
+  position: absolute;
+  z-index: 1;
+}
+
+.project-border {
+  position: relative;
+  border:rgb(56, 55, 55);
+  border-radius: 20px 0 20px 0;
+  margin: 12px 0;
+  z-index: 100;
 }
 
 .project-list {
@@ -43,27 +60,72 @@
   margin-top: 60px;
 }
 
-.project-list-name {
+.project-list-name,
+.project-name {
   cursor: pointer;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-weight: bold;
+}
+
+.project-list-name:hover {
+  color: white
 }
 
 .header {
-  /* display: flex;
+  display: flex;
   flex-direction: row;
-  align-items: baseline; */
+  align-items: center;
+  justify-content: space-between;
   text-align: right;
-  margin: 0 10%;
-  padding: 25px 0 
+  padding: 15px 0;
+  background-color: rgb(64, 63, 63);
+  height: 80px;
+}
+
+.header-item{
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-weight: bold;
+  font-style:italic;
+  /* margin: auto 10%; */
+  color: rgba(180, 180, 180);
+  margin-bottom: 0;
+}
+
+.header-descriptors {
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
 }
 
 .name {
-  
+  margin-left: 50px;
+  font-size: 2.25rem;
+  font-style:normal;
 }
 
-.social_links {
+.title {
+  font-size: 1.4rem;
+  margin-left: 15px
+}
+
+.social-links {
+  margin: 0 50px 0 30px
+}
+
+.social_link {
   margin-left: 16px;
-  color: white;
   font-size: large;
+  color: white;
+  text-decoration: none;
+  padding: 5px 10px;
+  border-radius: 2px;
+  background-color: rgb(3, 109, 82);
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+}
+
+.social_link:hover {
+  color: rgb(180, 180, 180)
 }
 
 .project_titles_container {
@@ -72,4 +134,23 @@
   flex-wrap: wrap;
   align-items: baseline;
   margin-right: 10px;
+}
+
+.actor-image {
+  width: 60%;
+}
+
+.actor-bio {
+  width: 60%;
+  margin: auto;
+}
+
+form {
+  display: block;
+  margin: auto;
+}
+
+footer {
+  height: 80px;
+  background-color: rgb(64, 63, 63);
 }
